// Adwarden MVP - DBML for dbdiagram.io
// Paste at https://dbdiagram.io/d

Project Adwarden {
  database_type: 'PostgreSQL'
  Note: 'Campaign-centric ad/notification delivery. visitors = event log (one row per serve).'
}

// ============ Enums ============
Enum user_role {
  user
  admin
}

Enum campaign_type {
  ads
  popup
  notification
}

Enum frequency_type {
  full_day
  time_based
  only_once
  always
  specific_count
}

Enum target_audience {
  new_users
  all_users
}

Enum campaign_status {
  active
  inactive
  scheduled
  expired
}

Enum visitor_event_type {
  ad
  notification
  popup
}

// ============ Auth ============
Table user {
  id varchar(255) [pk]
  name varchar(255)
  email varchar(255) [not null, unique]
  email_verified boolean [not null, default: false]
  image varchar(255)
  banned boolean [not null, default: false]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  role user_role [not null, default: 'user']
}

Table session {
  id varchar(255) [pk]
  user_id varchar(255) [not null]
  token varchar(255) [not null, unique]
  expires_at timestamp [not null]
  ip_address varchar(255)
  user_agent varchar(255)
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table account {
  id varchar(255) [pk]
  user_id varchar(255) [not null]
  account_id varchar(255) [not null]
  provider_id varchar(255) [not null]
  access_token text
  refresh_token text
  access_token_expires_at timestamp
  refresh_token_expires_at timestamp
  scope varchar(255)
  id_token text
  password varchar(255)
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table verification {
  id varchar(255) [pk]
  identifier varchar(255) [not null]
  value varchar(255) [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null]
}

// ============ Content ============
Table platforms {
  id uuid [pk]
  name varchar(255) [not null]
  domain varchar(255) [not null]
  is_active boolean [not null, default: true]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table ads {
  id uuid [pk]
  name varchar(255) [not null]
  description text
  image_url text
  target_url text
  html_code text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table notifications {
  id uuid [pk]
  title varchar(255) [not null]
  message text [not null]
  cta_link text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table notification_reads {
  id uuid [pk]
  notification_id uuid [not null]
  visitor_id varchar(255) [not null]
  read_at timestamp [not null]
  Index unique_notification_visitor (notification_id, visitor_id) [unique]
}

// ============ Campaigns ============
Table campaigns {
  id uuid [pk]
  name varchar(255) [not null]
  target_audience target_audience [not null, default: 'all_users']
  campaign_type campaign_type [not null]
  frequency_type frequency_type [not null]
  frequency_count integer
  time_start time
  time_end time
  status campaign_status [not null, default: 'inactive']
  start_date timestamp
  end_date timestamp
  created_by varchar(255) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table campaign_platforms {
  campaign_id uuid [pk]
  platform_id uuid [pk]
}

Table campaign_countries {
  campaign_id uuid [pk]
  country_code varchar(2) [pk]
}

Table campaign_ad {
  campaign_id uuid [pk, ref: > campaigns.id]
  ad_id uuid [pk, ref: > ads.id]
  Note: 'Same ad can be used in multiple campaigns'
}

Table campaign_notification {
  campaign_id uuid [pk, ref: > campaigns.id]
  notification_id uuid [pk, ref: > notifications.id]
  Note: 'Same notification can be used in multiple campaigns'
}

// ============ Visitors & Analytics ============
Table visitors {
  id uuid [pk]
  visitor_id varchar(255) [not null]
  campaign_id uuid
  domain varchar(255) [not null]
  type visitor_event_type [not null]
  country varchar(2)
  created_at timestamp [not null]
  Note: 'Event-based: one row per campaign serve'
}

// ============ Relationships ============
Ref: session.user_id > user.id
Ref: account.user_id > user.id
Ref: campaigns.created_by > user.id

Ref: notification_reads.notification_id > notifications.id

Ref: campaign_platforms.campaign_id > campaigns.id
Ref: campaign_platforms.platform_id > platforms.id

Ref: campaign_countries.campaign_id > campaigns.id

Ref: visitors.campaign_id > campaigns.id
